--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Simulation/Compilation_Strings/*.bat
 Simulation/Compilation_Strings/*.sh
 Simulation/Logs/*.json
 Simulation/Logs/*.txt
+Ensembling_Aggregation/__pycache__/*.*
+*.json
